.codegen/ingress/gloo-edge/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gloo-gateway-validation-webhook-default
  labels:
    app: gloo
    gloo: gateway
  annotations:
    cert-manager.io/inject-ca-from-secret: nukleros-gateway-system/certificate-authority
webhooks:
- name: gloo.default.svc  # must be a domain with at least three segments separated by dots
  clientConfig:
    service:
      name: gloo
      namespace: nukleros-gateway-system
      path: "/validation"
  rules:
  - operations: ["CREATE","UPDATE","DELETE"]
    apiGroups: ["gateway.solo.io"]
    apiVersions: ["v1"]
    resources: ["virtualservices"]
  - operations: ["CREATE","UPDATE","DELETE"]
    apiGroups: ["gateway.solo.io"]
    apiVersions: ["v1"]
    resources: ["routetables"]
  - operations: [ "CREATE", "UPDATE" ]

    apiGroups: ["gateway.solo.io"]
    apiVersions: ["v1"]
    resources: ["gateways"]
  - operations: ["CREATE","UPDATE","DELETE"]
    apiGroups: ["gloo.solo.io"]
    apiVersions: ["v1"]
    resources: ["upstreams"]

  - operations: [ "DELETE" ]
    apiGroups: ["gloo.solo.io"]
    apiVersions: ["v1"]
    resources: ["secrets"]
  - operations: ["CREATE","UPDATE","DELETE"]
    apiGroups: ["ratelimit.solo.io"]
    apiVersions: ["v1alpha1"]
    resources: ["ratelimitconfigs"]
  sideEffects: None
  matchPolicy: Exact
  admissionReviewVersions:
    - v1beta1 # v1beta1 still live in 1.22 https://github.com/kubernetes/api/blob/release-1.22/admission/v1beta1/types.go#L33
  failurePolicy: Ignore
